--- a/newpass/newpassword.html
+++ b/newpass/newpassword.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset confirmation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="passreset.css">
+    <link rel="stylesheet" href="newpass.css">
 </head>
 <body>
   <div class="container">
     <h1>Password Reset</h1>
-    <form>
-        <label for="newpass">New Password:</label>
-        <input type="password" name="newpass">
+    <form onsubmit="updatePassword()">
+        <label for="pass">New Password:</label>
+        <input type="password" name="pass" id="passIp">
+        <button>Submit</button>
     </form>
   </div>
  <script src="newpass.js"></script>   
